# preemo-llms-in-prod-2

./: .gitignore  .gitmodules  README.md  pyproject.toml
datasets/: math_questions.jsonl  math_questions_and_answers.jsonl
finetune/: constants.py  zero3_gsm8k.py  zero3_gsm8k_full.py
finetune/launcher_configs/: accelerate_zero3_no_offload_config.yaml
finetune/utils/: memory_trace.py
notebooks/: constants.py  gsm8k_preprocessing.ipynb  lora_weights.ipynb  prompt-engineering-notebook.ipynb
