[tool.poetry]
name = "markhng525/preemo-llms-in-prod-2"
version = "0.1.0"
description = ""
authors = ["mark <mark@preemo.io>", "lucia <lucia@preemo.io>"]

[tool.poetry.dependencies]
python = "3.10.10"
# Required for bitsandbytes 4-bit quantization https://github.com/artidoro/qlora/issues/121
accelerate = "^0.20.3"
bitsandbytes = "^0.39.0"
datasets = "2.12.0"
deepspeed = "0.9.2"
loguru = "0.7.0"
matplotlib = "3.6.3"
pandas = "1.5.3"
# Required for bitsandbytes 4-bit quantization
peft = { git = "https://github.com/huggingface/peft", rev = "eb75374" }
# Required for bitsandbytes 4-bit quantization
scipy = "^1.10.1"
# Torch 2.0.1 is not supported by accelerate
torch = "<2.0.0"
tqdm = "4.65.0"
# Required for bitsandbytes 4-bit quantization https://github.com/artidoro/qlora/issues/121
transformers = "^4.30.0"
typer = "0.9.0"
rouge = "^1.0.1"

[tool.poetry.group.evals.dependencies]
sacrebleu = "^2.3.1"
sqlitedict = "^2.1.0"
scikit-learn = "^1.2.2"
omegaconf = "^2.3.0"
pycountry = "^22.3.5"
rouge-score = "^0.1.2"

[tool.poetry.group.dev.dependencies]
black = "23.1.0"
isort = "5.12.0"
jupyter = "1.0.0"
mypy = "1.0.0"
pytest = "7.3.1"
ruff = "0.0.241"
tensorboard = "2.12.0"
watermark = "^2.4.2"

[tool.isort]
profile = "black"

# https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
[tool.mypy]
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

# https://github.com/python/mypy/issues/10632
[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.ruff]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  # "I",  # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
